# mlseg

./: NOTICE  README.md  REFERENCES.md  pyproject.toml
.github/workflows/: ci.yml
src/mlseg/: __init__.py  segment.py
tests/: test_segment.py
