[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlseg"
version = "0.1.0"
description = "Rule-based Malayalam surface segmenter (conservative morphological fallback)."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Jayashankar R", email = "56070307+jayashankarvr@users.noreply.github.com" }]
keywords = ["malayalam", "morphology", "nlp", "segmentation", "dravidian", "agglutinative"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = ["mlnorm>=0.4.0"]

[project.urls]
Homepage = "https://github.com/jayashankarvr/mlseg"
Source = "https://github.com/jayashankarvr/mlseg"
Issues = "https://github.com/jayashankarvr/mlseg/issues"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["src/mlseg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
